# SudcoAgent

./: .env.example  .gitignore  CLAUDE.md  CONTRIBUTING.md  LICENSE  Makefile  README.md  pyproject.toml
prompts/: generate_demo.txt
scripts/: analyze-loop.sh  overnight-run.sh
sudco_agent/: __main__.py  api_client.py  config.py  llm.py
sudco_agent/analysis/: gmaps.py
sudco_agent/commands/: analyze.py  build.py  clean_emails.py  discover.py  enrich.py  followup.py  followup_cold.py  health.py  process_bounces.py  send.py  send_cold.py  sweep.py
sudco_agent/data/: industry_demos.json  industry_demos.py  queries.json  queries.py  top_us_cities.py
sudco_agent/discovery/: foursquare.py
sudco_agent/enrichment/: email_scraper.py  site_review.py
sudco_agent/generation/: content.py  images.py
sudco_agent/outreach/: email.py
sudco_agent/outreach/templates/: first_outreach.txt  first_outreach_cold.html  first_outreach_cold.txt  follow_up_1.txt  follow_up_cold.html  follow_up_cold.txt
sudco_agent/review/: tui.py
tests/: test_captcha.py  test_email_scraper.py  test_foursquare_pagination.py  test_gmaps.py  test_industry_demos.py  test_process_bounces.py  test_smoke.py
