[project]
name = "sudco-agent"
version = "0.1.0"
description = "Autonomous prospecting agent for Sudco Solutions — discovers small businesses, generates demo sites via local Qwen, queues for human approval, and emails prospects."
requires-python = ">=3.11"
authors = [{ name = "Nate Suderman", email = "nate@sudcosolutions.com" }]
license = { text = "Proprietary" }

dependencies = [
  "httpx>=0.27",          # async HTTP for Foursquare, image APIs
  "openai>=1.50",         # OpenAI-compatible client pointed at local Qwen
  "rich>=13.7",           # TUI for the approval queue
  "pydantic>=2.7",        # demo schema validation
  "python-dotenv>=1.0",   # .env loading
  "Jinja2>=3.1",          # email templates
  "playwright>=1.45",     # for scraping fallback + screenshot capture
  "beautifulsoup4>=4.12", # parsing scraped pages
  "tldextract>=5.1",      # domain analysis
  "dnspython>=2.6",       # MX/A lookup so enrich drops emails on dead domains
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "ruff>=0.4"]

[project.scripts]
agent = "sudco_agent.__main__:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["sudco_agent*"]

[tool.setuptools.package-data]
sudco_agent = ["data/*.json"]

[tool.ruff]
line-length = 110
target-version = "py311"
